# PlaceholderName

./: .gitignore  CMakeLists.txt  Placeholder Name.sln  Placeholder Name.vcxproj  Placeholder Name.vcxproj.filters  PlaceholderName.sln  PlaceholderName.vcxproj  PlaceholderName.vcxproj.filters  README.md  makefile
depend/: .test.cpp.swp  test.cpp
include/: Config.hpp  Engine.h  Engine.hpp  Exception.h  Object.h  Utility.hpp  logger.hpp  q.hpp
src/: Config.cpp  Engine.cpp  Events.cpp  Object.cpp  logger.cpp  main.cpp
